<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.arcibald160.callblocker.AddNewBlockedTimetable"
    android:id="@+id/timetable_root_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_time_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:focusable="false"
        android:gravity="center"
        android:inputType="time"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_time_from"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_time_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:focusable="false"
        android:ems="5"
        android:gravity="center"
        android:inputType="time"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toEndOf="@+id/label_time_until"
        app:layout_constraintTop_toBottomOf="@+id/edit_time_from" />

    <TextView
        android:id="@+id/label_time_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_time_from"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_time_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="84dp"
        android:text="@string/label_time_until"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/label_time_from"
        app:layout_constraintStart_toStartOf="@+id/label_time_from"
        app:layout_constraintTop_toBottomOf="@+id/label_time_from" />

    <ToggleButton
        android:id="@+id/toggle_monday"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/button_divider"
        android:layout_marginTop="92dp"
        android:background="@drawable/day_toggle_button"
        android:text="@string/monday"
        android:textOff="@string/monday"
        android:textOn="@string/monday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_time_until" />

    <ToggleButton
        android:id="@+id/toggle_tuesday"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/button_divider"
        android:background="@drawable/day_toggle_button"
        android:text="@string/tuesday"
        android:textOff="@string/tuesday"
        android:textOn="@string/tuesday"
        app:layout_constraintStart_toEndOf="@+id/toggle_monday"
        app:layout_constraintTop_toTopOf="@+id/toggle_monday" />

    <ToggleButton
        android:id="@+id/toggle_wednesday"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/button_divider"
        android:background="@drawable/day_toggle_button"
        android:text="@string/wednesday"
        android:textOff="@string/wednesday"
        android:textOn="@string/wednesday"
        app:layout_constraintStart_toEndOf="@+id/toggle_tuesday"
        app:layout_constraintTop_toTopOf="@+id/toggle_tuesday" />

    <ToggleButton
        android:id="@+id/toggle_thursday"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/button_divider"
        android:background="@drawable/day_toggle_button"
        android:text="@string/thursday"
        android:textOff="@string/thursday"
        android:textOn="@string/thursday"
        app:layout_constraintStart_toEndOf="@+id/toggle_wednesday"
        app:layout_constraintTop_toTopOf="@+id/toggle_wednesday" />

    <ToggleButton
        android:id="@+id/toggle_friday"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/day_toggle_button"
        android:text="@string/friday"
        android:textOff="@string/friday"
        android:textOn="@string/friday"
        app:layout_constraintEnd_toStartOf="@+id/toggle_tuesday"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/toggle_monday"
        app:layout_constraintTop_toBottomOf="@+id/toggle_monday" />

    <ToggleButton
        android:id="@+id/toggle_saturday"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/day_toggle_button"
        android:text="@string/saturday"
        android:textOff="@string/saturday"
        android:textOn="@string/saturday"
        app:layout_constraintEnd_toStartOf="@+id/toggle_wednesday"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toEndOf="@+id/toggle_tuesday"
        app:layout_constraintTop_toTopOf="@+id/toggle_friday" />

    <ToggleButton
        android:id="@+id/toggle_sunday"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/day_toggle_button"
        android:text="@string/sunday"
        android:textOff="@string/sunday"
        android:textOn="@string/sunday"
        app:layout_constraintEnd_toStartOf="@+id/toggle_thursday"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/toggle_wednesday"
        app:layout_constraintTop_toTopOf="@+id/toggle_saturday" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/submit_timetable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/timetable_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/switch_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_saturday" />

</android.support.constraint.ConstraintLayout>