<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arcibald160.callblocker.AddContactToBlockedList">

    <TextView
        android:id="@+id/number_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/number_label"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/number_label_id"
        app:layout_constraintTop_toBottomOf="@+id/number_label_id" />

    <TextView
        android:id="@+id/name_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/name_label"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/number_input_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/number_input_id"
        app:layout_constraintTop_toBottomOf="@+id/number_input_id" />

    <EditText
        android:id="@+id/name_input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_label_id"
        app:layout_constraintTop_toBottomOf="@+id/name_label_id" />

    <Button
        android:id="@+id/contacts_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_button_label"
        app:layout_constraintBottom_toTopOf="@+id/number_input_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toEndOf="@+id/number_label_id"
        app:layout_constraintTop_toTopOf="@+id/number_label_id"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/add_blocked_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/blocked_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
